module12/resources/deploy/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpserver-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-port
        protocol: HTTPS
      hosts:
        - "httpsserver.cncamp.io"
      tls:
        mode: SIMPLE
        credentialName: cncamp-io-tls
